--- a/www/ia-topnav/index.html
+++ b/www/ia-topnav/index.html
@@ -1,4 +1,7 @@
-<link rel="stylesheet" href="https://archive.org/includes/build/css/archive.min.css">
+<link
+  rel="stylesheet"
+  href="https://archive.org/includes/build/css/archive.min.css"
+/>
 
 <script type="importmap">
   {
@@ -8,53 +11,71 @@
   }
 </script>
 
-<a href="#maincontent" id="skip-to-main-content-link" tabindex="1"><!--?lit$261864695$-->Skip to main content</a>
-<ia-topnav username="dd" screenname="ssss"></ia-topnav>
-
-
+<a href="#maincontent" id="skip-to-main-content-link" tabindex="1"
+  >Skip to main content</a
+>
 <script type="module" src="./src/ia-topnav.js"></script>
-<center style="display: none1;">
+
+<ia-topnav></ia-topnav>
+
+<center>
   <h1>demo</h1>
-  <button onclick="document.querySelector('ia-topnav').setAttribute('screenname', 'brewster'); document.querySelector('ia-topnav').setAttribute('username', '@brewster')">
+
+  <button
+    onclick="document.querySelector('ia-topnav').setAttribute('screenname', 'brewster'); document.querySelector('ia-topnav').setAttribute('username', '@brewster')"
+  >
     switch username to brewster
   </button>
-  <br>
-  <button onclick="document.querySelector('ia-topnav').setAttribute('screenname', 'a😊b😊c😊d😊e😊f😊g😊h😊i😊'); document.querySelector('ia-topnav').setAttribute('username', '@test')">
+  <br />
+  <button
+    onclick="document.querySelector('ia-topnav').setAttribute('screenname', 'a😊b😊c😊d😊e😊f😊g😊h😊i😊'); document.querySelector('ia-topnav').setAttribute('username', '@test')"
+  >
     switch username to a😊b😊c😊d😊e😊f😊g😊h😊i😊
   </button>
-  <br>
-  <button onclick="document.querySelector('ia-topnav').setAttribute('screenname', 'الدكتور محمالدكتور محمد العجوز محمالدكتور محمد العجوز'); document.querySelector('ia-topnav').setAttribute('username', '@test')">
+  <br />
+  <button
+    onclick="document.querySelector('ia-topnav').setAttribute('screenname', 'الدكتور محمالدكتور محمد العجوز محمالدكتور محمد العجوز'); document.querySelector('ia-topnav').setAttribute('username', '@test')"
+  >
     switch username to محمالدكتور محمد العجوز الدكتور محمالدكتور محمد العجوز
   </button>
-  <br>
-  <br>
-  <button onclick="document.querySelector('ia-topnav').removeAttribute('username')">
+  <br />
+  <br />
+  <button
+    onclick="document.querySelector('ia-topnav').removeAttribute('username')"
+  >
     switch to un-logged-in
   </button>
 
-  <hr>
+  <hr />
 
-  <button onclick="document.querySelector('ia-topnav').setAttribute('localLinks', false)">
+  <button
+    onclick="document.querySelector('ia-topnav').setAttribute('localLinks', false)"
+  >
     switch localLinks false (change to https://archive.org)
   </button>
-  <br>
-  <button onclick="document.querySelector('ia-topnav').removeAttribute('localLinks')">
+  <br />
+  <button
+    onclick="document.querySelector('ia-topnav').removeAttribute('localLinks')"
+  >
     switch to localLinks (default, change links to start with /)
   </button>
 
-
-  <hr>
-  <button onclick="document.querySelector('ia-topnav').setAttribute('waybackPagesArchived', 'many, MAAAANNNY')">
+  <hr />
+  <button
+    onclick="document.querySelector('ia-topnav').setAttribute('waybackPagesArchived', 'many, MAAAANNNY')"
+  >
     change WB pages count
   </button>
 
-
-  <hr>
-  <button onclick="document.querySelector('ia-topnav').setAttribute('hideSearch', true)">
+  <hr />
+  <button
+    onclick="document.querySelector('ia-topnav').setAttribute('hideSearch', true)"
+  >
     HIDE Top Row Search button, like on mobile
   </button>
-  <button onclick="document.querySelector('ia-topnav').removeAttribute('hideSearch')">
+  <button
+    onclick="document.querySelector('ia-topnav').removeAttribute('hideSearch')"
+  >
     SHOW Top Row Search button, like on mobile
   </button>
-
 </center>
