--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -38,7 +38,7 @@
       justify-content: center;
       flex-direction: column;
     }
-    
+
     .full {
       display: flex;
       flex-direction: column;
@@ -52,53 +52,8 @@
   </style>
 </head>
 <body>
-  <div id="demo"></div>
+  <app-root></app-root>
 
-  <script type="module">
-    import { html, render } from 'lit';
-    import '../dist/src/ia-pic-uploader.js';
-    
-    render(
-      html`
-      <div class="container">
-        <div class="full">
-          <h3>It will be used at My Uploads page</h3>
-          <ia-pic-uploader
-            lookingAtMyAccount
-            maxFileSizeInMB=3
-            id="full"
-          ></ia-pic-uploader>
-        </div>
-        <div class="compact">
-          <h3>It will be used at new account settings page</h3>
-          <ia-pic-uploader
-            lookingAtMyAccount
-            maxFileSizeInMB=3
-            id="compact"
-          ></ia-pic-uploader>
-        </div>
-      <div>
-      `,
-      document.querySelector('#demo')
-    );
-
-    const iaPicFull = document.querySelector('#full');
-    iaPicFull.identifier = '@453344354534';
-    iaPicFull.picture = '/demo/wider-image.jpg';
-    iaPicFull.endpoint = ''
-    iaPicFull.validFileTypes = ['image/jpeg', 'image/png', 'image/gif'];
-    iaPicFull.type = 'full';
-
-    const iaPicCompact = document.querySelector('#compact');
-    iaPicCompact.identifier = '@453344354534';
-    iaPicCompact.picture = '/demo/default-preview.jpg' ;
-    iaPicCompact.addEventListener('fileChanged',(e) => {
-      console.log('called hasErrorFiled()!')
-      console.log(e.detail)
-    });
-    iaPicCompact.addEventListener('fileUploaded',() => {
-      console.log('file Uploaded')
-    });
-  </script>
+  <script type="module" src="../dist/demo/app-root.js"></script>
 </body>
 </html>
