--- a/packages/ia-pic-uploader/demo/index.html
+++ b/packages/ia-pic-uploader/demo/index.html
@@ -7,98 +7,11 @@
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 10px; /* This is to match petabox's base font size */
     }
-
-    #demo {
-      margin: 50px;
-      display: flex;
-      justify-items: center;
-      align-items: center;
-      font-size: 14px;
-    }
-
-    .select-message {
-      display: none;
-    }
-
-    ia-pic-uploader {
-      --imgMaxHeight: 200px;
-      --imgMaxWidth: 200px;
-    }
-    ia-pic-uploader:focus {
-      outline: none;
-    }
-
-    ia-pic-uploader:focus-visible {
-      outline: none;
-    }
-
-    .container {
-      display: flex;
-      width: 100%;
-      justify-content: center;
-      flex-direction: column;
-    }
-    
-    .full {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .full, .compact {
-      padding: 25px 50px;
-      border: 1px solid black;
-      margin: 20px;
-    }
   </style>
 </head>
 <body>
-  <div id="demo"></div>
+  <app-root></app-root>
 
-  <script type="module">
-    import { html, render } from 'lit';
-    import '../dist/src/ia-pic-uploader.js';
-    
-    render(
-      html`
-      <div class="container">
-        <div class="full">
-          <h3>It will be used at My Uploads page</h3>
-          <ia-pic-uploader
-            lookingAtMyAccount
-            maxFileSizeInMB=3
-            id="full"
-          ></ia-pic-uploader>
-        </div>
-        <div class="compact">
-          <h3>It will be used at new account settings page</h3>
-          <ia-pic-uploader
-            lookingAtMyAccount
-            maxFileSizeInMB=3
-            id="compact"
-          ></ia-pic-uploader>
-        </div>
-      <div>
-      `,
-      document.querySelector('#demo')
-    );
-
-    const iaPicFull = document.querySelector('#full');
-    iaPicFull.identifier = '@453344354534';
-    iaPicFull.picture = '/demo/wider-image.jpg';
-    iaPicFull.endpoint = ''
-    iaPicFull.validFileTypes = ['image/jpeg', 'image/png', 'image/gif'];
-    iaPicFull.type = 'full';
-
-    const iaPicCompact = document.querySelector('#compact');
-    iaPicCompact.identifier = '@453344354534';
-    iaPicCompact.picture = '/demo/default-preview.jpg' ;
-    iaPicCompact.addEventListener('fileChanged',(e) => {
-      console.log('called hasErrorFiled()!')
-      console.log(e.detail)
-    });
-    iaPicCompact.addEventListener('fileUploaded',() => {
-      console.log('file Uploaded')
-    });
-  </script>
+  <script type="module" src="../dist/demo/app-root.js"></script>
 </body>
 </html>
