--- a/packages/ia-topnav/demo/index.html
+++ b/packages/ia-topnav/demo/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="utf-8">
+  <title>Internet Archive topnav component</title>
   <style>
     html {
       font-size: 10px;
